--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -25,13 +25,12 @@ jobs:
         with:
           context: . 
           push: true
-          tags: <docker-username>/<repo-name>:latest
-
-deploy:
-  runs-on: ubuntu-latest 
-  needs: build-and-push  # Run after the build-and-push job
-  steps:
-    - name: Deploy to Server
-      run: |
-        echo "Deploying container to production..."
-        # Add your deployment commands here (e.g., SSH to server and run Docker commands)
+          tags: vibhorpatel71/assignment2:latest
+  deploy:
+    runs-on: ubuntu-latest 
+    needs: build-and-push  # Run after the build-and-push job
+    steps:
+      - name: Deploy to Server
+        run: |
+          echo "Deploying container to production..."
+          # Add your deployment commands here (e.g., SSH to server and run Docker commands)
